--- a/package.json
+++ b/package.json
@@ -3,25 +3,32 @@
   "version": "0.1.0",
   "dependencies": {
     "bcrypt": "^0.8.5",
-    "body-parser": "latest",
+    "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "electrolyte": "^0.2.0",
-    "express": "latest",
+    "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
     "jwt-simple": "^0.4.0",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "mongoose": "latest",
-    "morgan": "latest",
+    "mongoose": "^4.3.1",
+    "morgan": "^1.6.1",
     "rfr": "^1.2.3",
-    "winston": "latest"
+    "winston": "^2.1.1"
   },
   "scripts": {
     "start": "node server.js"
   },
   "devDependencies": {
-    "node-inspector": "^0.12.4",
-    "nodemon": "^1.8.1",
-    "noide": "0.0.7"
+    "chai": "^3.4.1",
+    "karma": "^0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-sinon": "^1.0.4",
+    "karma-spec-reporter": "0.0.23",
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
+    "sinon": "^1.17.2"
   }
 }
