--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.8.0",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.1",
