--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^3.4.1",
     "gulp": "^3.9.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-nodemon": "^2.0.4",
     "jshint": "^2.8.0",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
@@ -31,6 +32,7 @@
     "karma-sinon": "^1.0.4",
     "karma-spec-reporter": "0.0.23",
     "mocha": "^2.3.4",
+    "nodemon": "^1.8.1",
     "phantomjs": "^1.9.19",
     "sinon": "^1.17.2"
   }
