--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "winston": "^2.1.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "gulp develop",
+	"test": "gulp test"
   },
   "devDependencies": {
     "chai": "^3.4.1",
