--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ sudo: false
 node_js:
   - "5.0"
 env:
-  - NODE_ENV=development
   - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 services:
   - mongodb
 
